fix shared-kernel sonar issues